# teloperation

./: data.txt
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/robot_msgs/: ik.h  omega.h
devel/lib/master_driver/: omega_driver_node
devel/lib/omega7_drive/: omega_single  read_pose
devel/lib/pkgconfig/: master_driver.pc  omega7_drive.pc  robot_inverse_kinematic.pc  robot_msgs.pc  robot_servo_control.pc
devel/lib/robot_inverse_kinematic/: robot_inverse  robot_inverse_single_ver1
devel/share/gennodejs/ros/robot_msgs/msg/: _index.js
devel/share/master_driver/cmake/: master_driverConfig.cmake
devel/share/omega7_drive/cmake/: omega7_driveConfig.cmake
devel/share/robot_inverse_kinematic/cmake/: robot_inverse_kinematicConfig.cmake
devel/share/robot_msgs/cmake/: robot_msgs-msg-paths.cmake  robot_msgsConfig.cmake
devel/share/robot_servo_control/cmake/: robot_servo_controlConfig.cmake
devel/share/roseus/ros/robot_msgs/: manifest.l
src/master_driver/src/: omega_driver.cpp
src/omega7_drive/: CMakeLists.txt
src/omega7_drive/src/: omega_single.cpp
src/robot_inverse_kinematic/: CMakeLists.txt
src/robot_inverse_kinematic/src/: robot_inverse_single_ver1.cpp
